# automated-theorem-solver

./: CMakeLists.txt  LICENSE  README.md  clean_build.sh  notes.txt  runme.sh
.cache/clangd/index/: clause.cpp.2143F64AB0250CE2.idx  clause.cpp.DD22E53DF15528C1.idx  clause.h.081DB43696832FB1.idx  clause.h.E920029BD0394412.idx  dic.cpp.D9E3E4079CBABBC0.idx  dic.h.3C510B70127801EF.idx  display_tree.cpp.75D7BF28D8E46494.idx  display_tree.cpp.918BEA5CF2B4FA40.idx  display_tree.h.352F66B9F2D8F873.idx  display_tree.h.94B5061FA7F342B9.idx  dynamicbitset.cpp.21F7934EB0092073.idx  dynamicbitset.cpp.3615A3F8F3A9DF34.idx  dynamicbitset.h.899F4702045F79D3.idx  dynamicbitset.h.E36EF22D2769D30D.idx  helpers.cpp.4E6CF13AB7D68F73.idx  helpers.cpp.8DCA91D0C4ADF996.idx  helpers.h.51F72045A0915B0A.idx  helpers.h.AAD5D77CF75AC31D.idx  lexer.cpp.211EB36F1EC1504F.idx  lexer.cpp.616600F3EDB2E8E6.idx  lexer.h.A713AE32242CDC1A.idx  lexer.h.C9BA8025CC438759.idx  main.cpp.56C0D3A1320D718E.idx  main.cpp.9679BBA7F3059E90.idx  solver.cpp.BD9944579FF2CE5C.idx  solver.cpp.EF75F79D847EC530.idx  solver.h.7F9CCA2A7D6B465E.idx  solver.h.AF5AD456AB99519C.idx  token.cpp.1DF5EF6BCCF73984.idx  token.cpp.4CC6C882716E3B80.idx  token.h.8EEEC022A3C5F516.idx  token.h.E027E41B6BDE68FD.idx  (+4 more)
Calc_example/: main.cpp
data/: solver.txt
src/: clause.cpp  clause.h  dic.cpp  dic.h  display_tree.cpp  display_tree.h  dynamicbitset.cpp  dynamicbitset.h  helpers.cpp  helpers.h  lexer.cpp  lexer.h  main.cpp  solver.cpp  solver.h  token.cpp  token.h  tokens.h  tree.cpp  tree.h
src/old_dic/: dic.cpp  dic.h
